--- a/package.json
+++ b/package.json
@@ -8,8 +8,10 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@auth0/auth0-spa-js": "^1.10.0",
     "@tailwindcss/ui": "^0.3.1",
     "core-js": "^3.6.5",
+    "jwt-decode": "^2.2.0",
     "tailwindcss": "^1.4.6",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0"
