Add apollo graphql example codes

--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "jwt-decode": "^2.2.0",
     "tailwindcss": "^1.4.6",
     "vue": "^2.6.11",
+    "vue-apollo": "^3.0.0-beta.11",
     "vue-router": "^3.2.0"
   },
   "devDependencies": {
@@ -29,6 +30,7 @@
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-standard": "^4.0.0",
     "eslint-plugin-vue": "^6.2.2",
+    "graphql-tag": "^2.9.0",
     "lint-staged": "^9.5.0",
     "vue-cli-plugin-apollo": "~0.22.2",
     "vue-template-compiler": "^2.6.11"
