--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "tailwindcss": "^1.4.6",
     "vue": "^2.6.11",
     "vue-apollo": "^3.0.0-beta.11",
+    "vue-cookies": "^1.7.2",
     "vue-router": "^3.2.0"
   },
   "devDependencies": {
