--- a/package.json
+++ b/package.json
@@ -14,16 +14,23 @@
     "jwt-decode": "^2.2.0",
     "tailwindcss": "^1.4.6",
     "vue": "^2.6.11",
-    "vue-apollo": "^3.0.0-beta.11",
+    "vue-apollo": "^3.0.3",
+    "vue-class-component": "^7.2.3",
+    "vue-cli-plugin-apollo": "^0.22.2",
     "vue-cookies": "^1.7.2",
+    "vue-property-decorator": "^8.4.2",
     "vue-router": "^3.2.0"
   },
   "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^2.33.0",
+    "@typescript-eslint/parser": "^2.33.0",
     "@vue/cli-plugin-babel": "~4.4.0",
     "@vue/cli-plugin-eslint": "~4.4.0",
     "@vue/cli-plugin-router": "~4.4.0",
+    "@vue/cli-plugin-typescript": "~4.4.0",
     "@vue/cli-service": "~4.4.0",
     "@vue/eslint-config-standard": "^5.1.2",
+    "@vue/eslint-config-typescript": "^5.0.2",
     "babel-eslint": "^10.1.0",
     "eslint": "^6.7.2",
     "eslint-plugin-import": "^2.20.2",
@@ -33,7 +40,7 @@
     "eslint-plugin-vue": "^6.2.2",
     "graphql-tag": "^2.9.0",
     "lint-staged": "^9.5.0",
-    "vue-cli-plugin-apollo": "~0.22.2",
+    "typescript": "~3.9.3",
     "vue-template-compiler": "^2.6.11"
   },
   "gitHooks": {
